--- a/index.html
+++ b/index.html
@@ -91,16 +91,23 @@
     <h2>Your Cart</h2>
     <button id="closeCartBtn">❌</button>
   </div>
-  <ul id="cartItemsList">
+  <ul id="cartItemsList" class="cartItemsList">
     <!-- Cart items will be added here dynamically -->
   </ul>
+  
 </div>
 
+
 <div>
+
+
   <div class="main-content">
+   
     <div class="brand-section">    
       </div>
+       
     </div>
+
     <div id="productPopUp" class="PopUp hidden">
   <div class="PopUp-content">
    
@@ -110,7 +117,7 @@
     <h3 id="PopUpTitle"></h3>
     <p id="PopUpPrice"></p>
     <p id="PopUpDetail"></p>
-    <button class="add-to-cart" id="addCart" >Add to Cart</button>
+    <button class="add-to-cart Mainbut butClick" id="addCart" >Add to Cart</button>
 
     </div>
   </div>
@@ -119,7 +126,6 @@
 
 
 
-  
 
 
 
