--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
 </nav>
 
-    <div > <button class="cart cartToggleBtn" id="cartToggleBtn"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="white"
+    <div > <button class="cart cartToggleBtn" id="cartToggleBtn" style="padding-right: 4rem;"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="white"
         stroke-width="2" viewBox="0 0 24 24">
         <circle cx="9" cy="21" r="1"></circle> <!-- left wheel -->
         <circle cx="20" cy="21" r="1"></circle> <!-- right wheel -->
@@ -89,7 +89,14 @@
 <div id="cartPanel" class="cart-panel">
   <div class="cart-header">
     <h2>Your Cart</h2>
-    <button id="closeCartBtn">❌</button>
+    <button id="closeCartBtn" class="cart">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="white"
+        stroke-width="2" viewBox="0 0 24 24">
+        <circle cx="9" cy="21" r="1"></circle> <!-- left wheel -->
+        <circle cx="20" cy="21" r="1"></circle> <!-- right wheel -->
+        <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+      </svg>
+    </button>
   </div>
   <ul id="cartItemsList" class="cartItemsList">
     <!-- Cart items will be added here dynamically -->
